Add support for derivative-specific field parsing to allow enforcement of additional restrictions (eg. updating Vcs-Git, etc.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ lintian (2.5.82) UNRELEASED; urgency=medium
     + [CL] Add a special case for the python3 addon as it needs a
       dependency on dh-python unless the -dev packages are used.
       Thanks to Julian Andres Klode for the report.  (Closes: #895284)
+  * checks/fields.{desc,pm}:
+    + [CL] Add support for derivative-specific field parsing to allow
+      enforcement of additional restrictions (eg. updating Vcs-Git, etc.)
   * checks/python.pm:
     + [CL] Apply patch from Pierre-Elliott Bécue to loosen the changelog
       parsing of the new-package-should-not-package-python2-module tag to
