--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,9 @@ lintian (2.5.82) UNRELEASED; urgency=medium
     + [CL] Allow spaces within the ownership field of tar -tvf output
       whilst still allowing spaces in filenames.  (Closes: #895175)
 
+  * debian/*, commands/*, CONTRIBUTING.md, etc.:
+    + [CL] Move canonical source repository from Alioth to salsa.
+
  -- Chris Lamb <lamby@debian.org>  Sat, 07 Apr 2018 10:14:46 +0100
 
 lintian (2.5.81) unstable; urgency=medium
