--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-lintian (2.5.82) UNRELEASED; urgency=medium
+lintian (2.5.82) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - invalid-field-for-derivative
+      - invalid-version-number-for-derivative
 
   * checks/changes-file.{desc,pm}:
     + [CL] Add support for derivative-specific version validation to permit
@@ -23,11 +26,18 @@ lintian (2.5.82) UNRELEASED; urgency=medium
     + [CL] Add support for blacklisting source packages in order to prevent
       some currently-problematic packages such as gcc-8-cross-ports
       preventing the update of https://lintian.debian.org/.  (See #890873)
+  * debian/*, commands/*, CONTRIBUTING.md, etc.:
+    + [CL] Move canonical source repository from Alioth to salsa.
+  * lib/Lintian/Collect/Package.pm:
+    + [CL] Allow spaces within the ownership field of tar -tvf output
+      whilst still allowing spaces in filenames.  (Closes: #895175)
 
   * data/scripts/maintainer-script-bad-command:
     + [CL] Also check for find(1) calls when checking for maintainer
       scripts that use a recursive chmod or chown.  Thanks to Daniel Kahn
       Gillmor for the report.  (Closes: #895370)
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
   * vendors/pureos/main/data/changes-file/derivative-versions:
     + [CL] Ensure that PureOS packages always end with (eg. pureosX).
@@ -35,14 +45,7 @@ lintian (2.5.82) UNRELEASED; urgency=medium
     + [CL] Add PureOS-specific field name validation, such as ensuring the
       Maintainer field is updated to the mailing list.
 
-  * lib/Lintian/Collect/Package.pm:
-    + [CL] Allow spaces within the ownership field of tar -tvf output
-      whilst still allowing spaces in filenames.  (Closes: #895175)
-
-  * debian/*, commands/*, CONTRIBUTING.md, etc.:
-    + [CL] Move canonical source repository from Alioth to salsa.
-
- -- Chris Lamb <lamby@debian.org>  Sat, 07 Apr 2018 10:14:46 +0100
+ -- Chris Lamb <lamby@debian.org>  Thu, 12 Apr 2018 10:18:25 +0000
 
 lintian (2.5.81) unstable; urgency=medium
 
