--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.83) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 12 Apr 2018 12:07:28 +0100
+
 lintian (2.5.82) unstable; urgency=medium
 
   * Summary of tag changes:
