--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.84) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 18 Apr 2018 12:54:55 +0100
+
 lintian (2.5.83) unstable; urgency=medium
 
   * Summary of tag changes:
