--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,13 @@ lintian (2.5.84) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/python.desc:
+    + [CL] Replace all instances of "specifies a dependency on Python 2.x
+      which not be maintained past 2020" with a clarification that this
+      refers to upstream's policy followed by a suggestion that it may be
+      dropped after the release of Debian "buster".  Thanks to Adrian Bunk
+      for the suggestion.  (Closes: #896079)
+
  -- Chris Lamb <lamby@debian.org>  Wed, 18 Apr 2018 12:54:55 +0100
 
 lintian (2.5.83) unstable; urgency=medium
