--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ lintian (2.5.84) UNRELEASED; urgency=medium
       them being added multiple times to our index.  This was resulting in
       false-positives for the source-contains-empty-directory tag.  Thanks
       to James McCoy for the report.  (Closes: #896010)
+    + [CL] Correct "as_anchored_root_dir" -> "has_anchored_root_dir" typo
+      introduced in e0c833b3.
 
  -- Chris Lamb <lamby@debian.org>  Wed, 18 Apr 2018 12:54:55 +0100
 
