--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.85) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 23 Apr 2018 14:12:59 +0200
+
 lintian (2.5.84) unstable; urgency=medium
 
 
