Update description of debian-watch-uses-insecure-uri to clarify what to do if there is currently no secure URI. (Closes: #897082)

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,10 @@ lintian (2.5.85) UNRELEASED; urgency=medium
       "eg.", ellipsis ("..."), "etc.", splitting out the tests to make
       it clearer and to catch some other corner cases.  Thanks to Andreas
       Beckmann for the detailed report.  (Closes: #896671)
+  * checks/watch-file.desc:
+    + [CL] Update description of debian-watch-uses-insecure-uri to clarify
+      what to do if there is currently no secure URI.  Thanks to Andreas
+      Tille for the report.  (Closes: #897082)
 
   * doc/releases.md:
     + [CL] Clarify that we should add an extra bit of whitespace for
