Ignore templated ".in" files in debian/patches for the patch-file-present-but-not-mentioned-in-series tag.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,9 @@ lintian (2.5.85) UNRELEASED; urgency=medium
       Beckmann for the detailed report.  (Closes: #896671)
     + [CL] Include the synopsis itself for context, etc. when emitting the
       description-synopsis-might-not-be-phrased-properly tag.
+  * checks/patch-systems.pm:
+    + [CL] Ignore templated ".in" files in debian/patches for the
+      patch-file-present-but-not-mentioned-in-series tag.
   * checks/watch-file.desc:
     + [CL] Update description of debian-watch-uses-insecure-uri to clarify
       what to do if there is currently no secure URI.  Thanks to Andreas
