--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,10 @@ lintian (2.5.85) UNRELEASED; urgency=medium
       what to do if there is currently no secure URI.  Thanks to Andreas
       Tille for the report.  (Closes: #897082)
 
+  * collection/src-orig-index:
+    + [CL] Pass --full-date to tar(1) to ensure that we get a consistent
+      output in the presence of spaces in other fields.  (Closes: #897248)
+
   * data/java/constants:
     + [CL] Apply patches from Bas Couwenberg to update the bytecode checks
       for OpenJDK 10 add bytecode number for OpenJDK 11.  (Closes: #897424)
