--- a/debian/changelog
+++ b/debian/changelog
@@ -29,7 +29,7 @@ lintian (2.5.85) UNRELEASED; urgency=medium
   * checks/debhelper.{pm,desc}:
     + [CL] Don't use $. out-of-context when reporting on dh --parallel.
     + [CL] Add a pedantic warning for packages that do not use debhelper or
-      CBDS.  (Closes: #884499)
+      CDBS.  (Closes: #884499)
   * checks/description.pm:
     + [CL] Rework the description-synopsis-might-not-be-phrased-properly
       tag to ensure we do not cause false-positives for literal "e.g.",
