--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
-lintian (2.5.85) UNRELEASED; urgency=medium
+lintian (2.5.85) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - ancient-python-version-field
+      - changed-by-invalid-for-derivative
+      - old-python-version-field
+      - package-does-not-use-debhelper-or-cdbs
 
   * checks/{binaries,shared-libs.pm}:
     + [CL] Update shared object detection for file >= 5.33 as this version
@@ -85,6 +90,7 @@ lintian (2.5.85) UNRELEASED; urgency=medium
   * data/spelling/corrections:
     + [CL] Add a "CBDS" → "CDBS" correction.
     + [CL] Add a "DSFG" → "DFSG" correction.
+    + [PW] Add a number of corrections.
 
   * doc/releases.md:
     + [CL] Clarify that we should add an extra bit of whitespace for
@@ -106,7 +112,7 @@ lintian (2.5.85) UNRELEASED; urgency=medium
     + [CL] Apply patch from Adam Conrad to add cosmic as a known Ubuntu
       distribution.  (Closes: #897638)
 
- -- Chris Lamb <lamby@debian.org>  Mon, 23 Apr 2018 14:12:59 +0200
+ -- Chris Lamb <lamby@debian.org>  Sat, 05 May 2018 23:31:53 +0000
 
 lintian (2.5.84) unstable; urgency=medium
 
