--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.86) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 05 May 2018 16:57:18 -0700
+
 lintian (2.5.85) unstable; urgency=medium
 
   * Summary of tag changes:
