--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.86) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * data/debhelper/dh_addons-manual:
+    + [CL] Also permit python-scour to satisfy the requirement for the
+      scour addon.  (Closes: #898077)
+
  -- Chris Lamb <lamby@debian.org>  Sat, 05 May 2018 16:57:18 -0700
 
 lintian (2.5.85) unstable; urgency=medium
