--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.86) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/changelog-file.{desc,pm}:
+    * [CL] Emit an error when a package bumps the epoch but the upstream
+      version did not go "backwards".  Thanks to Raphael Hertzog for the
+      idea.  (Closes: #889816)
+
   * data/debhelper/dh_addons-manual:
     + [CL] Also permit python-scour to satisfy the requirement for the
       scour addon.  (Closes: #898077)
