--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ lintian (2.5.86) UNRELEASED; urgency=medium
   XXX: generate tag summary
 
   * checks/changelog-file.{desc,pm}:
-    * [CL] Emit an error when a package bumps the epoch but the upstream
+    + [CL] Emit an error when a package bumps the epoch but the upstream
       version did not go "backwards".  Thanks to Raphael Hertzog for the
       idea.  (Closes: #889816)
 
