--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ lintian (2.5.86) UNRELEASED; urgency=medium
     + [CL] Emit an error when a package bumps the epoch but the upstream
       version did not go "backwards".  Thanks to Raphael Hertzog for the
       idea.  (Closes: #889816)
+  * checks/fields.pm:
+    + [CL] Move homepage-field-uses-insecure-uri regex into a separate data
+      file now it is getting unwieldy.
 
   * data/debhelper/dh_addons-manual:
     + [CL] Also permit python-scour to satisfy the requirement for the
