--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,11 @@ lintian (2.5.86) UNRELEASED; urgency=medium
   * data/debhelper/dh_addons-manual:
     + [CL] Also permit python-scour to satisfy the requirement for the
       scour addon.  (Closes: #898077)
+  * data/fields/insecure-homepage-uris:
+    + [CL] Add non-HTTPS gnu.org to the list of sites we should warn about
+      for homepage-field-uses-insecure-uri.  Thanks to Mattia Rizzolo for
+      the report.  (Closes: #898160)
+
 
  -- Chris Lamb <lamby@debian.org>  Sat, 05 May 2018 16:57:18 -0700
 
